<resources>
    <string name="app_name">TD2</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="todo">TODO</string>
    <string name="choisir_une_image">Choisir une image</string>
    <string name="prendre_une_photo">prendre une photo</string>
    <string name="zeaeazeaz">TODO</string>
    <string name="sauvegarder_ces_donn_es">sauvegarder ces données</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="insert_your_firstname">Insert your firstname</string>
    <string name="insert_your_lastname">Insert your lastname</string>
    <string name="insert_your_mail_adress">Insert your mail adress</string>
    <string name="insert_your_password">Insert your password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="authentication">Authentication</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
</resources>
